# CSAPI4Py

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
conSys/: __init__.py  collections.py  con_sys_api.py  constants.py  deployments.py  endpoints.py  properties.py  query.py  querymodel.py  request_bodies.py  systems.py
conSys/comm/: mqtt.py
conSys/core/: default_api_helpers.py
conSys/datamodels/: api_utils.py  control_streams.py  datastreams.py  geometry.py  observations.py  query.py  swe_components.py  system_events_and_history.py
conSys/endpoints/: datastreams.py  deployments.py  endpoints.py  fois.py  observations.py  procedures.py  properties.py  sampling_features.py  system_ep.py  tasking.py
conSys/part_1/: __init__.py  capabilities.py  deployments.py  procedures.py  sampling_features.py  systems.py
conSys/part_2/: __init__.py  commands.py  control_channels.py  datastreams.py  observations.py  system_events.py  system_history.py
conSys/sensor_ml/: sml.py
conSys4Py/: __init__.py  con_sys_api.py  constants.py  endpoints.py  request_bodies.py
conSys4Py/comm/: mqtt.py
conSys4Py/core/: default_api_helpers.py
conSys4Py/datamodels/: control_streams.py  datastreams.py  geometry.py  network_properties.py  observations.py  swe_components.py  system_events_and_history.py
conSys4Py/part_1/: capabilities.py  collections_ep.py  deployments.py  procedures.py  properties.py  sampling_features.py  systems.py
conSys4Py/part_2/: commands.py  control_channels.py  datastreams.py  observations.py  system_events.py  system_history.py
tests/: conftest.py  test_commands.py  test_default_api_helpers.py  test_delete_all.py  test_params.py  test_script_full_suite.py  test_system_events_and_history.py  test_systems.py
