[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "conSys4Py"
version = "0.0.1-alpha.1"
authors = ["Ian Patterson <ian@botts-inc.com>"]
description = "OGC Connected Systems API client for Python"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.3"
requests = "^2.31.0"
paho-mqtt = "^2.0.0"


[project.urls]
"Homepage" = "https://opensensorhub.org"